objects/ssot__RecruitmentRequisition__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DefaultPostingLanguage__c</fullName>
        <label>Default Posting Language</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExpectedHireDate__c</fullName>
        <label>Expected Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalVacancyTitleName__c</fullName>
        <label>External Vacancy Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalVacancyTitle__c</fullName>
        <label>External Vacancy Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Recruitment Requisition</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecruitmentReqApprvlStatus__c</fullName>
        <label>Recruitment Requisition Approval Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecruitmentReqState__c</fullName>
        <label>Recruitment Requisition State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecruitmentReqVacancyType__c</fullName>
        <label>Recruitment Req Vacancy Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecruitmentRequisitionType__c</fullName>
        <label>Recruitment Requisition Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequisitionIdentifier__c</fullName>
        <label>Requisition Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VacancyCount__c</fullName>
        <label>Vacancy Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__VacancyDescription__c</fullName>
        <label>Vacancy Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VacancyTitleName__c</fullName>
        <label>Vacancy Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VacancyTitle__c</fullName>
        <label>[DoNotUse]Vacancy Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>